<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="success">success</string>
    <string name="failed">failed</string>
    <string name="test_success">Test success</string>
    <string name="test_failed">Test failed</string>
    <string name="message_tip">Message Tip</string>
    <string name="test_over">Test over</string>
    <string name="touch_test">Touch Test</string>
    <string name="tp_type">TP Type:</string>
    <string name="capacitive_touch">Capacitive Touch</string>
    <string name="line_test">Line Test:</string>
    <string name="accuracy_test">Accuracy Test:</string>
    <string name="sensitivity_test">Sensitivity Test:</string>
    <string name="blind_zone_test">Blind zone Test:</string>
    <string name="scaling_test">Scaling Test:</string>
    <string name="free_test">Free Test:</string>
    <string name="passed" >passed</string>
    <string name="unpassed">unpassed</string>
    <string name="try_again">Try again</string>
    <string name="skip">Skip</string>
</resources>
